grid-qtify-takehome

--- a/qtify/src/index.css
+++ b/qtify/src/index.css
@@ -24,3 +24,11 @@ body {
   color: var(--color-white);
   overflow-x: hidden;
 }
+.swiper-slide {
+  width: auto !important;
+}
+img,
+svg {
+  display: block;
+  max-width: 100%;
+}
