--- a/qtify/src/components/Card/Card.module.css
+++ b/qtify/src/components/Card/Card.module.css
@@ -1,33 +1,32 @@
-.qtifycard {
-  width: 159px;
-  height: 232px;
-  border-radius: 10px, 10px, 10px, 10px;
-  margin-left: 10px;
+.wrapper {
+  width: 160px;
 }
-.qtifyCardImage {
-  width: 159px;
-  height: 170px;
-}
-.cardBullet {
-  background-color: black;
-  width: 83px;
-  height: 23px;
-  border-radius: 10px;
-  padding: 4px, 8px, 4px, 8px;
-  font-size: small;
-  font-weight: 100;
-  align-content: center;
-  margin-left: 8px;
-}
-.cardtitle {
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: 400;
-  font-size: 14px;
-  margin-left: 8px;
-}
-.upperTile {
-  width: 159px;
+.card {
+  position: relative;
+  width: 160px;
   height: 205px;
-  border-radius: 10px, 10px, 10px, 10px;
-  background-color: white;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.banner {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 42px;
+  background-color: var(--color-white);
+  display: flex;
+  align-items: center;
+  padding: 6px;
+  .chip {
+    background-color: var(--color-black);
+    color: var(--color-white);
+  }
+}
+
+.titleWrapper {
+  margin-top: 6px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
